--- a/main/project/webpage.css
+++ b/main/project/webpage.css
@@ -634,6 +634,42 @@ video {
   top: 1.25rem;
 }
 
+.top-4 {
+  top: 1rem;
+}
+
+.top-8 {
+  top: 2rem;
+}
+
+.-left-4 {
+  left: -1rem;
+}
+
+.-left-8 {
+  left: -2rem;
+}
+
+.-left-10 {
+  left: -2.5rem;
+}
+
+.top-10 {
+  top: 2.5rem;
+}
+
+.top-9 {
+  top: 2.25rem;
+}
+
+.-left-3 {
+  left: -0.75rem;
+}
+
+.-left-7 {
+  left: -1.75rem;
+}
+
 .-z-40 {
   z-index: -40;
 }
@@ -686,6 +722,14 @@ video {
   margin: auto;
 }
 
+.m-3 {
+  margin: 0.75rem;
+}
+
+.m-36 {
+  margin: 9rem;
+}
+
 .mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
@@ -716,6 +760,11 @@ video {
   margin-bottom: 2rem;
 }
 
+.my-\[10\%\] {
+  margin-top: 10%;
+  margin-bottom: 10%;
+}
+
 .my-\[5\%\] {
   margin-top: 5%;
   margin-bottom: 5%;
@@ -726,19 +775,29 @@ video {
   margin-bottom: auto;
 }
 
-.my-\[15\%\] {
-  margin-top: 15%;
-  margin-bottom: 15%;
+.my-40 {
+  margin-top: 10rem;
+  margin-bottom: 10rem;
 }
 
-.my-\[1-0\%\] {
-  margin-top: 1-0%;
-  margin-bottom: 1-0%;
+.my-48 {
+  margin-top: 12rem;
+  margin-bottom: 12rem;
 }
 
-.my-\[10\%\] {
-  margin-top: 10%;
-  margin-bottom: 10%;
+.my-36 {
+  margin-top: 9rem;
+  margin-bottom: 9rem;
+}
+
+.my-20 {
+  margin-top: 5rem;
+  margin-bottom: 5rem;
+}
+
+.mx-20 {
+  margin-left: 5rem;
+  margin-right: 5rem;
 }
 
 .mb-10 {
@@ -917,18 +976,6 @@ video {
   height: 100svh;
 }
 
-.h-\[\] {
-  height: ;
-}
-
-.h-3\/4 {
-  height: 75%;
-}
-
-.h-3\/5 {
-  height: 60%;
-}
-
 .max-h-\[1300px\] {
   max-height: 1300px;
 }
@@ -1042,6 +1089,22 @@ video {
   width: 100vw;
 }
 
+.w-\[\] {
+  width: ;
+}
+
+.w-\[1-\%\] {
+  width: 1-%;
+}
+
+.w-\[10\%\] {
+  width: 10%;
+}
+
+.w-\[400\%\] {
+  width: 400%;
+}
+
 .max-w-\[480px\] {
   max-width: 480px;
 }
@@ -1090,6 +1153,10 @@ video {
 
 .grid-cols-3 {
   grid-template-columns: repeat(3, minmax(0, 1fr));
+}
+
+.grid-cols-\[30\%_70\%\] {
+  grid-template-columns: 30% 70%;
 }
 
 .grid-rows-1 {
@@ -1201,6 +1268,10 @@ video {
   text-wrap: nowrap;
 }
 
+.text-pretty {
+  text-wrap: pretty;
+}
+
 .rounded-2xl {
   border-radius: 1rem;
 }
@@ -1237,6 +1308,11 @@ video {
 .rounded-t-xl {
   border-top-left-radius: 0.75rem;
   border-top-right-radius: 0.75rem;
+}
+
+.rounded-b-full {
+  border-bottom-right-radius: 9999px;
+  border-bottom-left-radius: 9999px;
 }
 
 .border {
@@ -1446,6 +1522,16 @@ video {
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 
+.bg-red-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-slate-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-60 {
   --tw-bg-opacity: 0.6;
 }
@@ -1481,6 +1567,11 @@ video {
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.object-fill {
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .p-1 {
@@ -1597,6 +1688,11 @@ video {
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .pb-20 {
@@ -1729,6 +1825,10 @@ video {
 
 .font-semibold {
   font-weight: 600;
+}
+
+.font-thin {
+  font-weight: 100;
 }
 
 .uppercase {
@@ -1886,6 +1986,14 @@ video {
   --tw-text-opacity: 0;
 }
 
+.text-opacity-5 {
+  --tw-text-opacity: 0.05;
+}
+
+.text-opacity-80 {
+  --tw-text-opacity: 0.8;
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -2003,6 +2111,14 @@ video {
 
 .duration-1000 {
   transition-duration: 1000ms;
+}
+
+.duration-200 {
+  transition-duration: 200ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
 }
 
 * {
@@ -2312,33 +2428,23 @@ video {
   content: var(--tw-content);
 }
 
-.before\:content-\[\'Computer\'\]::before {
-  --tw-content: 'Computer';
-  content: var(--tw-content);
-}
-
-.before\:content-\[\'Grid_of_Post\'\]::before {
-  --tw-content: 'Grid of Post';
-  content: var(--tw-content);
-}
-
-.before\:content-\[\'Plant\'\]::before {
-  --tw-content: 'Plant';
-  content: var(--tw-content);
-}
-
 .before\:content-\[\'Card\'\]::before {
   --tw-content: 'Card';
   content: var(--tw-content);
 }
 
-.before\:content-\[\'F\.A\.Q\'\]::before {
-  --tw-content: 'F.A.Q';
+.before\:content-\[\'Cloth\'\]::before {
+  --tw-content: 'Cloth';
   content: var(--tw-content);
 }
 
-.before\:content-\[\'File\'\]::before {
-  --tw-content: 'File';
+.before\:content-\[\'Computer\'\]::before {
+  --tw-content: 'Computer';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'F\.A\.Q\'\]::before {
+  --tw-content: 'F.A.Q';
   content: var(--tw-content);
 }
 
@@ -2352,18 +2458,8 @@ video {
   content: var(--tw-content);
 }
 
-.before\:content-\[\'Image\'\]::before {
-  --tw-content: 'Image';
-  content: var(--tw-content);
-}
-
-.before\:content-\[\'Cloath\'\]::before {
-  --tw-content: 'Cloath';
-  content: var(--tw-content);
-}
-
-.before\:content-\[\'Cloth\'\]::before {
-  --tw-content: 'Cloth';
+.before\:content-\[\'Grid_of_Post\'\]::before {
+  --tw-content: 'Grid of Post';
   content: var(--tw-content);
 }
 
@@ -2372,13 +2468,18 @@ video {
   content: var(--tw-content);
 }
 
-.before\:content-\[\'Watch\'\]::before {
-  --tw-content: 'Watch';
+.before\:content-\[\'Plant\'\]::before {
+  --tw-content: 'Plant';
   content: var(--tw-content);
 }
 
 .before\:content-\[\'Registration\'\]::before {
   --tw-content: 'Registration';
+  content: var(--tw-content);
+}
+
+.before\:content-\[\'Watch\'\]::before {
+  --tw-content: 'Watch';
   content: var(--tw-content);
 }
 
@@ -2392,69 +2493,9 @@ video {
   left: -6rem;
 }
 
-.after\:aspect-square::after {
-  content: var(--tw-content);
-  aspect-ratio: 1 / 1;
-}
-
 .after\:h-full::after {
   content: var(--tw-content);
   height: 100%;
-}
-
-.after\:h-3\/4::after {
-  content: var(--tw-content);
-  height: 75%;
-}
-
-.after\:h-3\/5::after {
-  content: var(--tw-content);
-  height: 60%;
-}
-
-.after\:h-4\/5::after {
-  content: var(--tw-content);
-  height: 80%;
-}
-
-.after\:h-\[150\%\]::after {
-  content: var(--tw-content);
-  height: 150%;
-}
-
-.after\:h-\[100\%\]::after {
-  content: var(--tw-content);
-  height: 100%;
-}
-
-.after\:h-\[80\%\]::after {
-  content: var(--tw-content);
-  height: 80%;
-}
-
-.after\:h-1\/2::after {
-  content: var(--tw-content);
-  height: 50%;
-}
-
-.after\:h-3::after {
-  content: var(--tw-content);
-  height: 0.75rem;
-}
-
-.after\:h-\[\]::after {
-  content: var(--tw-content);
-  height: ;
-}
-
-.after\:h-\[50\%\]::after {
-  content: var(--tw-content);
-  height: 50%;
-}
-
-.after\:h-\[40\%\]::after {
-  content: var(--tw-content);
-  height: 40%;
 }
 
 .after\:w-1\/4::after {
@@ -2462,61 +2503,10 @@ video {
   width: 25%;
 }
 
-.after\:w-1\/2::after {
-  content: var(--tw-content);
-  width: 50%;
-}
-
-.after\:w-1\/3::after {
-  content: var(--tw-content);
-  width: 33.333333%;
-}
-
-.after\:w-\[100\%\]::after {
-  content: var(--tw-content);
-  width: 100%;
-}
-
-.after\:w-\[80\%\]::after {
-  content: var(--tw-content);
-  width: 80%;
-}
-
-.after\:w-\[40\%\]::after {
-  content: var(--tw-content);
-  width: 40%;
-}
-
-.after\:w-\[\]::after {
-  content: var(--tw-content);
-  width: ;
-}
-
-.after\:w-\[50\%\]::after {
-  content: var(--tw-content);
-  width: 50%;
-}
-
-.after\:w-\[30\%\]::after {
-  content: var(--tw-content);
-  width: 30%;
-}
-
 .after\:skew-x-12::after {
   content: var(--tw-content);
   --tw-skew-x: 12deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.after\:rounded-full::after {
-  content: var(--tw-content);
-  border-radius: 9999px;
-}
-
-.after\:rounded-r-full::after {
-  content: var(--tw-content);
-  border-top-right-radius: 9999px;
-  border-bottom-right-radius: 9999px;
 }
 
 .after\:content-\[\'\'\]::after {
@@ -2601,6 +2591,11 @@ video {
 .hover\:bg-white:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-yellow-400:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(250 204 21 / var(--tw-bg-opacity));
 }
 
 .hover\:font-mono:hover {
@@ -2721,6 +2716,11 @@ video {
     margin-right: 5rem;
   }
 
+  .sm\:my-10 {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+  }
+
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -2733,6 +2733,16 @@ video {
   .sm\:text-5xl {
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
   }
 }
 
@@ -2884,6 +2894,11 @@ video {
     line-height: 1.75rem;
   }
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .md\:font-bold {
     font-weight: 700;
   }
@@ -2940,6 +2955,10 @@ video {
     grid-template-columns: 45% 55%;
   }
 
+  .lg\:grid-cols-\[30\%_70\%\] {
+    grid-template-columns: 30% 70%;
+  }
+
   .lg\:grid-rows-1 {
     grid-template-rows: repeat(1, minmax(0, 1fr));
   }
@@ -2954,6 +2973,10 @@ video {
 
   .lg\:items-start {
     align-items: flex-start;
+  }
+
+  .lg\:gap-8 {
+    gap: 2rem;
   }
 
   .lg\:rounded-md {
@@ -2988,6 +3011,11 @@ video {
     line-height: 1.75rem;
   }
 
+  .lg\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .lg\:before\:-left-10::before {
     content: var(--tw-content);
     left: -2.5rem;
@@ -2997,12 +3025,6 @@ video {
     content: var(--tw-content);
     --tw-bg-opacity: 1;
     background-color: rgb(250 204 21 / var(--tw-bg-opacity));
-  }
-
-  .lg\:after\:bg-yellow-200::after {
-    content: var(--tw-content);
-    --tw-bg-opacity: 1;
-    background-color: rgb(254 240 138 / var(--tw-bg-opacity));
   }
 }
 
