--- a/main/project/webpage.css
+++ b/main/project/webpage.css
@@ -694,50 +694,6 @@ video {
   margin: auto;
 }
 
-.m-10 {
-  margin: 2.5rem;
-}
-
-.m-1 {
-  margin: 0.25rem;
-}
-
-.m-12 {
-  margin: 3rem;
-}
-
-.m-14 {
-  margin: 3.5rem;
-}
-
-.m-\[\] {
-  margin: ;
-}
-
-.m-\[7\%\] {
-  margin: 7%;
-}
-
-.m-\[4\%\] {
-  margin: 4%;
-}
-
-.m-\[3\%\] {
-  margin: 3%;
-}
-
-.m-\[2\%\] {
-  margin: 2%;
-}
-
-.m-\[1\%\] {
-  margin: 1%;
-}
-
-.m-\[\%\] {
-  margin: %;
-}
-
 .mx-10 {
   margin-left: 2.5rem;
   margin-right: 2.5rem;
@@ -788,14 +744,14 @@ video {
   margin-bottom: 5%;
 }
 
-.my-auto {
-  margin-top: auto;
-  margin-bottom: auto;
-}
-
 .my-\[8\%\] {
   margin-top: 8%;
   margin-bottom: 8%;
+}
+
+.my-auto {
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .mb-10 {
@@ -870,12 +826,12 @@ video {
   margin-top: 2rem;
 }
 
-.mt-3 {
-  margin-top: 0.75rem;
+.mt-\[\] {
+  margin-top: ;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
+.mt-\[5\%\] {
+  margin-top: 5%;
 }
 
 .inline-block {
@@ -1070,6 +1026,10 @@ video {
   width: 70%;
 }
 
+.w-\[79\%\] {
+  width: 79%;
+}
+
 .w-\[80\%\] {
   width: 80%;
 }
@@ -1097,62 +1057,6 @@ video {
 
 .w-screen {
   width: 100vw;
-}
-
-.w-\[\%\] {
-  width: %;
-}
-
-.w-\[85\%\] {
-  width: 85%;
-}
-
-.w-\[850\%\] {
-  width: 850%;
-}
-
-.w-\[83\%\] {
-  width: 83%;
-}
-
-.w-\[82\%\] {
-  width: 82%;
-}
-
-.w-\[81\%\] {
-  width: 81%;
-}
-
-.w-\[84\%\] {
-  width: 84%;
-}
-
-.w-\[87\%\] {
-  width: 87%;
-}
-
-.w-\[88\%\] {
-  width: 88%;
-}
-
-.w-\[78\%\] {
-  width: 78%;
-}
-
-.w-\[789\%\] {
-  width: 789%;
-}
-
-.w-\[79\%\] {
-  width: 79%;
-}
-
-.w-\[90_10\%\] {
-  width: 90 10%;
-}
-
-.w-\[90\%_10\%\] {
-  width: 90% 10%;
 }
 
 .max-w-\[480px\] {
@@ -1221,10 +1125,6 @@ video {
   grid-template-rows: 70% 30%;
 }
 
-.grid-rows-\[90\%_10\%\] {
-  grid-template-rows: 90% 10%;
-}
-
 .flex-col {
   flex-direction: column;
 }
@@ -1239,10 +1139,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.justify-end {
-  justify-content: flex-end;
 }
 
 .justify-center {
@@ -1402,20 +1298,8 @@ video {
   border-top-width: 1px;
 }
 
-.border-b-2 {
-  border-bottom-width: 2px;
-}
-
-.border-t-2 {
-  border-top-width: 2px;
-}
-
 .border-t-4 {
   border-top-width: 4px;
-}
-
-.border-t-\[10px\] {
-  border-top-width: 10px;
 }
 
 .border-dashed {
@@ -1465,14 +1349,6 @@ video {
 .border-yellow-400 {
   --tw-border-opacity: 1;
   border-color: rgb(250 204 21 / var(--tw-border-opacity));
-}
-
-.border-t-\[\] {
-  border-top-color: ;
-}
-
-.border-t-\[1\] {
-  border-top-color: 1;
 }
 
 .bg-black {
@@ -1593,11 +1469,6 @@ video {
 .bg-yellow-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
-}
-
-.bg-red-300 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
 }
 
 .bg-opacity-60 {
@@ -1753,26 +1624,6 @@ video {
   padding-bottom: 2rem;
 }
 
-.py-6 {
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
-}
-
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.px-7 {
-  padding-left: 1.75rem;
-  padding-right: 1.75rem;
-}
-
-.px-3 {
-  padding-left: 0.75rem;
-  padding-right: 0.75rem;
-}
-
 .pb-20 {
   padding-bottom: 5rem;
 }
@@ -1807,10 +1658,6 @@ video {
 
 .text-center {
   text-align: center;
-}
-
-.text-right {
-  text-align: right;
 }
 
 .text-justify {
@@ -1901,29 +1748,16 @@ video {
   line-height: 1.75rem;
 }
 
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
-}
-
-.text-\[20px\] {
-  font-size: 20px;
-}
-
-.text-\[18px\] {
-  font-size: 18px;
-}
-
 .font-bold {
   font-weight: 700;
 }
 
-.font-semibold {
-  font-weight: 600;
-}
-
 .font-extrabold {
   font-weight: 800;
+}
+
+.font-semibold {
+  font-weight: 600;
 }
 
 .uppercase {
@@ -1942,32 +1776,8 @@ video {
   line-height: 2.5rem;
 }
 
-.tracking-tighter {
-  letter-spacing: -0.05em;
-}
-
-.tracking-tight {
-  letter-spacing: -0.025em;
-}
-
 .tracking-wider {
   letter-spacing: 0.05em;
-}
-
-.tracking-wide {
-  letter-spacing: 0.025em;
-}
-
-.tracking-widest {
-  letter-spacing: 0.1em;
-}
-
-.-tracking-tighter {
-  letter-spacing: 0.05em;
-}
-
-.-tracking-tight {
-  letter-spacing: 0.025em;
 }
 
 .text-\[red\] {
@@ -2103,14 +1913,6 @@ video {
 .text-yellow-500 {
   --tw-text-opacity: 1;
   color: rgb(234 179 8 / var(--tw-text-opacity));
-}
-
-.text-\[\] {
-  color: ;
-}
-
-.text-\[px\] {
-  color: px;
 }
 
 .text-opacity-0 {
@@ -2647,29 +2449,6 @@ video {
   content: var(--tw-content);
 }
 
-.hover\:-translate-x-12:hover {
-  --tw-translate-x: -3rem;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-75:hover {
-  --tw-scale-x: .75;
-  --tw-scale-y: .75;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:-scale-75:hover {
-  --tw-scale-x: -.75;
-  --tw-scale-y: -.75;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.hover\:scale-100:hover {
-  --tw-scale-x: 1;
-  --tw-scale-y: 1;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .hover\:scale-125:hover {
   --tw-scale-x: 1.25;
   --tw-scale-y: 1.25;
@@ -2694,10 +2473,6 @@ video {
 
 .hover\:animate-spin:hover {
   animation: spin 1s linear infinite;
-}
-
-.hover\:overflow-hidden:hover {
-  overflow: hidden;
 }
 
 .hover\:border:hover {
@@ -2762,11 +2537,6 @@ video {
 .hover\:bg-yellow-400:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(250 204 21 / var(--tw-bg-opacity));
-}
-
-.hover\:object-cover:hover {
-  -o-object-fit: cover;
-     object-fit: cover;
 }
 
 .hover\:font-mono:hover {
@@ -2851,16 +2621,8 @@ video {
   --tw-shadow: var(--tw-shadow-colored);
 }
 
-.hover\:duration-700:hover {
-  transition-duration: 700ms;
-}
-
 .hover\:duration-300:hover {
   transition-duration: 300ms;
-}
-
-.hover\:duration-500:hover {
-  transition-duration: 500ms;
 }
 
 .hover\:before\:translate-x-0:hover::before {
@@ -2896,18 +2658,6 @@ video {
 
 .focus\:duration-700:focus {
   transition-duration: 700ms;
-}
-
-.group:hover .group-hover\:scale-125 {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.group .group-\[\]\:hover\:scale-125:hover {
-  --tw-scale-x: 1.25;
-  --tw-scale-y: 1.25;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 @media not all and (min-width: 1280px) {
@@ -2976,6 +2726,26 @@ video {
     top: 0px;
   }
 
+  .md\:right-10 {
+    right: 2.5rem;
+  }
+
+  .md\:right-1 {
+    right: 0.25rem;
+  }
+
+  .md\:right-5 {
+    right: 1.25rem;
+  }
+
+  .md\:right-4 {
+    right: 1rem;
+  }
+
+  .md\:right-2 {
+    right: 0.5rem;
+  }
+
   .md\:m-0 {
     margin: 0px;
   }
@@ -2990,8 +2760,16 @@ video {
     margin-bottom: 2.5rem;
   }
 
+  .md\:block {
+    display: block;
+  }
+
   .md\:flex {
     display: flex;
+  }
+
+  .md\:hidden {
+    display: none;
   }
 
   .md\:h-\[120svh\] {
